# winscard_stub

./: .gitignore  CMakeLists.txt
include/: missing_stl.h  stubbing.h  winscard_stub.h
src/: WinscardContext.cpp  WinscardContext.h  stubbing.cpp  winscard_stub.cpp
src/eventhandler/: ReaderEventSubject.cpp  ReaderEventSubject.h  SmartcardEventSubject.cpp  SmartcardEventSubject.h  WinscardEventObserver.cpp  WinscardEventObserver.h  WinscardEventSubject.cpp  WinscardEventSubject.h
src/readers/: NonPinpadReader.cpp  NonPinpadReader.h  PinpadReader.cpp  PinpadReader.h  SmartcardReader.cpp  SmartcardReader.h
src/smartcards/: Smartcard.cpp  Smartcard.h  TestSmartcard.cpp  TestSmartcard.h
test/: test_stubbing.cpp  test_winscard_stub.cpp
